<resources>
    <string name="app_name">BrickList</string>
    <string name="hint_project_name">Project name</string>
    <string name="hint_set_id">Set ID</string>
    <string name="button_add">Add</string>
    <string name="error_set_not_found">Set not found</string>
    <string name="item_image_description">Item image</string>
    <string name="increment_quantity_button">Increment quantity</string>
    <string name="decrement_quantity_button">Decrement quantity</string>
    <string name="brick_description">%1$s [%2$s]</string>
    <string name="quantity_text">%1$d of %2$d</string>
    <string name="create_project_loading">Creating new project…</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_create_project">Create project</string>
    <string name="menu_order_by_code">Order by Code</string>
    <string name="menu_order_by_color">Order by Color</string>
    <string name="menu_export">Save missing parts</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="menu_delete">Delete</string>
</resources>
